CRUD with mongoose

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# my confidential constants
+/server/constants
+
 # compiled output
 /dist
 /tmp
